--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
 <script type="text/javascript">
     (function () {
         var options = {
-            call_to_action: "Contactanos", // Call to action
-            button_color: "#129BF4", // Color of button
+            facebook: "1451091961658067", // Facebook page ID
+            call_to_action: "Message us", // Call to action
             position: "right", // Position may be 'right' or 'left'
         };
         var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
